--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,4 +4,16 @@
   padding: 2rem;
   text-align: center;
 }
-
+.appStyle{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+    max-width: 400px;
+      margin: 20px auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      background-color: #f9f9f9;
+      font-family: Arial, sans-serif;
+}
