--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,4 +1,14 @@
-
+.formStyle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+}
 
 .submitBtn {
     display: block;
@@ -56,7 +66,7 @@ input[type="email"]:focus {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-.errorMessage{
+.errorMessage {
     color: red;
     font-size: 12px;
 }
